--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ description = "Convert samples from the Greengate DS3 to WAV"
 
 [dependencies]
 anyhow = "1.0"
+clap = { version = "4.1", features = [ "derive" ] }
 hound = "3.5"
